@@ -86,6 +86,25 @@ import org.jdom.Namespace;
 import org.jdom.filter.ElementFilter;
 import org.jdom.xpath.XPath;
 
+import javax.annotation.CheckForNull;
+import javax.annotation.Nonnull;
+import java.io.File;
+import java.sql.SQLException;
+import java.util.ArrayList;
+import java.util.Calendar;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.UUID;
+import java.util.Vector;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
 /**
  * Handles all operations on metadata (select,insert,update,delete etc...).
  *
@@ -169,7 +188,6 @@ public class DataManager {
             // get metadata
             Element record = (Element) result.getContent(i);
             String  id     = record.getChildText("id");
-            int iId = Integer.parseInt(id);
 
             if (Log.isDebugEnabled(Geonet.DATA_MANAGER))
                 Log.debug(Geonet.DATA_MANAGER, "- record ("+ id +")");
@@ -285,7 +303,6 @@ public class DataManager {
      */
     public void indexInThreadPoolIfPossible(Dbms dbms, String id) throws Exception {
         if(ServiceContext.get() == null ) {
-            boolean indexGroup = false;
             indexMetadata(dbms, id);
         } else {
             indexInThreadPool(ServiceContext.get(), id, dbms);
@@ -327,7 +344,15 @@ public class DataManager {
             // TODO why swallow
         }
     }
-
+    
+    Set<IndexMetadataTask> indexing = Collections.synchronizedSet(new HashSet<IndexMetadataTask>());
+    
+    public boolean isIndexing() {
+        synchronized (indexing) {
+            return !indexing.isEmpty();
+        }
+    }
+    
     /**
      * TODO javadoc.
      */
@@ -340,6 +365,10 @@ public class DataManager {
         private JeevesUser user;
 
         IndexMetadataTask(ServiceContext context, List<String> ids) {
+            synchronized (indexing) {
+                indexing.add(this);
+            }
+            
             this.context = context;
             this.ids = ids;
             this.beginIndex = 0;
@@ -349,6 +378,10 @@ public class DataManager {
             }
         }
         IndexMetadataTask(ServiceContext context, List<String> ids, int beginIndex, int count) {
+            synchronized (indexing) {
+                indexing.add(this);
+            }
+            
             this.context = context;
             this.ids = ids;
             this.beginIndex = beginIndex;
@@ -404,6 +437,10 @@ public class DataManager {
             catch (Exception e) {
                 Log.error(Geonet.DATA_MANAGER, "Reindexing thread threw exception");
                 e.printStackTrace();
+            } finally {
+                synchronized (indexing) {
+                    indexing.remove(this);
+                }
             }
         }
     }
@@ -418,7 +455,7 @@ public class DataManager {
     public void indexMetadata(Dbms dbms, String id) throws Exception {
         try {
             Vector<Element> moreFields = new Vector<Element>();
-            int id$ = new Integer(id);
+            int id$ = Integer.valueOf(id);
 
             // get metadata, extracting and indexing any xlinks
             Element md   = xmlSerializer.selectNoXLinkResolver(dbms, "Metadata", id, true);
@@ -443,7 +480,7 @@ public class DataManager {
 
             // get metadata table fields
             String query = "SELECT schemaId, createDate, changeDate, source, isTemplate, root, " +
-                    "title, uuid, isHarvested, owner, groupOwner, popularity, rating FROM Metadata WHERE id = ?";
+                    "title, uuid, isHarvested, owner, groupOwner, popularity, rating, displayOrder FROM Metadata WHERE id = ?";
 
             Element rec = dbms.select(query, id$).getChild("record");
 
@@ -460,6 +497,7 @@ public class DataManager {
             String  groupOwner = rec.getChildText("groupowner");
             String  popularity = rec.getChildText("popularity");
             String  rating     = rec.getChildText("rating");
+            String  displayOrder = rec.getChildText("displayorder");
 
             if(Log.isDebugEnabled(Geonet.DATA_MANAGER)) {
                 Log.debug(Geonet.DATA_MANAGER, "record schema (" + schema + ")"); //DEBUG
@@ -479,11 +517,12 @@ public class DataManager {
             moreFields.add(SearchManager.makeField("_dummy",       "0",        false, true));
             moreFields.add(SearchManager.makeField("_popularity",  popularity,  true, true));
             moreFields.add(SearchManager.makeField("_rating",      rating,      true, true));
+            moreFields.add(SearchManager.makeField("_displayOrder",displayOrder, true, false));
 
             if (owner != null) {
                 String userQuery = "SELECT username, surname, name, profile FROM Users WHERE id = ?";
 
-                Element user = dbms.select(userQuery,  new Integer(owner)).getChild("record");
+                Element user = dbms.select(userQuery,  Integer.valueOf(owner)).getChild("record");
 
                 if (user != null) {
                     moreFields.add(SearchManager.makeField("_userinfo",
@@ -496,12 +535,12 @@ public class DataManager {
                 moreFields.add(SearchManager.makeField("_groupOwner", groupOwner, true, true));
 
             // get privileges
-            List operations = dbms
+            @SuppressWarnings("unchecked")
+            List<Element> operations = dbms
                     .select("SELECT groupId, operationId, g.name FROM OperationAllowed o, groups g WHERE g.id = o.groupId AND metadataId = ? ORDER BY operationId ASC", id$)
                     .getChildren();
 
-            for (Object operation1 : operations) {
-                Element operation = (Element) operation1;
+            for (Element operation : operations) {
                 String groupId = operation.getChildText("groupid");
                 String operationId = operation.getChildText("operationid");
                 moreFields.add(SearchManager.makeField("_op" + operationId, groupId, true, true));
@@ -511,17 +550,18 @@ public class DataManager {
                 }
             }
             // get categories
-            List categories = dbms
+            @SuppressWarnings("unchecked")
+            List<Element> categories = dbms
                     .select("SELECT id, name FROM MetadataCateg, Categories WHERE metadataId = ? AND categoryId = id ORDER BY id", id$)
                     .getChildren();
 
-            for (Object category1 : categories) {
-                Element category = (Element) category1;
+            for (Element category : categories) {
                 String categoryName = category.getChildText("name");
                 moreFields.add(SearchManager.makeField("_cat", categoryName, true, true));
             }
 
             // get status
+            @SuppressWarnings("unchecked")
             List<Element> statuses = dbms.select("SELECT statusId, userId, changeDate FROM MetadataStatus WHERE metadataId = ? ORDER BY changeDate DESC", id$)
                     .getChildren();
             if (statuses.size() > 0) {
@@ -536,6 +576,7 @@ public class DataManager {
             // -1 : not evaluated
             // 0 : invalid
             // 1 : valid
+            @SuppressWarnings("unchecked")
             List<Element> validationInfo = dbms
                     .select("SELECT valType, status FROM Validation WHERE metadataId = ?", id$)
                     .getChildren();
@@ -730,13 +771,14 @@ public class DataManager {
      * @throws Exception
      */
     public String getMetadataSchema(Dbms dbms, String id) throws Exception {
-        List list = dbms.select("SELECT schemaId FROM Metadata WHERE id = ?", new Integer(id)).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> list = dbms.select("SELECT schemaId FROM Metadata WHERE id = ?", Integer.valueOf(id)).getChildren();
 
         if (list.size() == 0)
             throw new IllegalArgumentException("Metadata not found for id : " +id);
         else {
             // get metadata
-            Element record = (Element) list.get(0);
+            Element record = list.get(0);
             return record.getChildText("schemaid");
         }
     }
@@ -795,7 +837,7 @@ public class DataManager {
 
         DataManager dataMan = gc.getDataManager();
 
-        dataMan.setNamespacePrefix(xml);
+        DataManager.setNamespacePrefix(xml);
         try {
             dataMan.validate(schema, xml);
         } catch (XSDValidationErrorEx e) {
@@ -805,14 +847,6 @@ public class DataManager {
                 throw new XSDValidationErrorEx(e.getMessage(),e.getObject());
             }
         }
-
-        //-----------------------------------------------------------------------
-        //--- if the uuid does not exist we generate it
-
-        String uuid = dataMan.extractUUID(schema, xml);
-
-        if (uuid.length() == 0)
-            uuid = UUID.randomUUID().toString();
 
         //--- Now do the schematron validation on this file - if there are errors
         //--- then we say what they are!
@@ -881,23 +915,23 @@ public class DataManager {
                     Element xmlReport = Xml.transform(md, schemaTronXmlXslt, params);
                     if (xmlReport != null) {
                         report.addContent(xmlReport);
-                    }
-                    // add results to persitent validation information
-                    int firedRules = 0;
-                    Iterator<Element> i = xmlReport.getDescendants(new ElementFilter ("fired-rule", Namespace.getNamespace("http://purl.oclc.org/dsdl/svrl")));
-                    while (i.hasNext()) {
-                        i.next();
-                        firedRules ++;
-                    }
-                    int invalidRules = 0;
-                    i = xmlReport.getDescendants(new ElementFilter ("failed-assert", Namespace.getNamespace("http://purl.oclc.org/dsdl/svrl")));
-                    while (i.hasNext()) {
-                        i.next();
-                        invalidRules ++;
-                    }
-                    Integer[] results = {invalidRules!=0?0:1, firedRules, invalidRules};
-                    if (valTypeAndStatus != null) {
-                        valTypeAndStatus.put(ruleId, results);
+                        // add results to persitent validation information
+                        int firedRules = 0;
+                        Iterator<?> firedRulesElems = xmlReport.getDescendants(new ElementFilter ("fired-rule", Namespace.getNamespace("http://purl.oclc.org/dsdl/svrl")));
+                        while (firedRulesElems.hasNext()) {
+                            firedRulesElems.next();
+                            firedRules ++;
+                        }
+                        int invalidRules = 0;
+                        Iterator<?> faileAssertElements = xmlReport.getDescendants(new ElementFilter ("failed-assert", Namespace.getNamespace("http://purl.oclc.org/dsdl/svrl")));
+                        while (faileAssertElements.hasNext()) {
+                            faileAssertElements.next();
+                            invalidRules ++;
+                        }
+                        Integer[] results = {invalidRules!=0?0:1, firedRules, invalidRules};
+                        if (valTypeAndStatus != null) {
+                            valTypeAndStatus.put(ruleId, results);
+                        }
                     }
                 } catch (Exception e) {
                     Log.error(Geonet.DATA_MANAGER,"WARNING: schematron xslt "+schemaTronXmlXslt+" failed");
@@ -946,9 +980,9 @@ public class DataManager {
 
             //-- now get each xpath and evaluate it
             //-- xsderrors/xsderror/{message,xpath}
-            List list = xsdErrors.getChildren();
-            for (Object o : list) {
-                Element elError = (Element) o;
+            @SuppressWarnings("unchecked")
+            List<Element> list = xsdErrors.getChildren();
+            for (Element elError : list) {
                 String xpath = elError.getChildText("xpath", Edit.NAMESPACE);
                 String message = elError.getChildText("message", Edit.NAMESPACE);
                 message = "\\n" + message;
@@ -1098,12 +1132,13 @@ public class DataManager {
     public String getMetadataId(Dbms dbms, String uuid) throws Exception {
         String query = "SELECT id FROM Metadata WHERE uuid=?";
 
-        List list = dbms.select(query, uuid).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> list = dbms.select(query, uuid).getChildren();
 
         if (list.size() == 0)
             return null;
 
-        Element record = (Element) list.get(0);
+        Element record = list.get(0);
 
         return record.getChildText("id");
     }
@@ -1118,12 +1153,13 @@ public class DataManager {
     public String getMetadataUuid(Dbms dbms, String id) throws Exception {
         String query = "SELECT uuid FROM Metadata WHERE id=?";
 
-        List list = dbms.select(query, new Integer(id)).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> list = dbms.select(query, Integer.valueOf(id)).getChildren();
 
         if (list.size() == 0)
             return null;
 
-        Element record = (Element) list.get(0);
+        Element record = list.get(0);
 
         return record.getChildText("uuid");
     }
@@ -1138,12 +1174,13 @@ public class DataManager {
     public String getMetadataTemplate(Dbms dbms, String id) throws Exception {
         String query = "SELECT istemplate FROM Metadata WHERE id=?";
 
-        List list = dbms.select(query, new Integer(id)).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> list = dbms.select(query, Integer.valueOf(id)).getChildren();
 
         if (list.size() == 0)
             return null;
 
-        Element record = (Element) list.get(0);
+        Element record = list.get(0);
 
         return record.getChildText("istemplate");
     }
@@ -1161,38 +1198,15 @@ public class DataManager {
                 "FROM   Metadata "+
                 "WHERE id=?";
 
-        List list = dbms.select(query, new Integer(id)).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> list = dbms.select(query, Integer.valueOf(id)).getChildren();
 
         if (list.size() == 0)
             return null;
 
-        Element record = (Element) list.get(0);
+        Element record = list.get(0);
 
-        MdInfo info = new MdInfo();
-
-        info.id          = id;
-        info.uuid        = record.getChildText("uuid");
-        info.schemaId    = record.getChildText("schemaid");
-        info.isHarvested = "y".equals(record.getChildText("isharvested"));
-        info.createDate  = record.getChildText("createdate");
-        info.changeDate  = record.getChildText("changedate");
-        info.source      = record.getChildText("source");
-        info.title       = record.getChildText("title");
-        info.root        = record.getChildText("root");
-        info.owner       = record.getChildText("owner");
-        info.groupOwner  = record.getChildText("groupowner");
-        info.displayOrder  = record.getChildText("displayOrder");
-
-        String temp = record.getChildText("istemplate");
-
-        if ("y".equals(temp))
-            info.template = MdInfo.Template.TEMPLATE;
-
-        else if ("s".equals(temp))
-            info.template = MdInfo.Template.SUBTEMPLATE;
-
-        else
-            info.template = MdInfo.Template.METADATA;
+        MdInfo info = new MdInfo(id, record);
 
         return info;
     }
@@ -1253,7 +1267,6 @@ public class DataManager {
      */
     public void setHarvested(Dbms dbms, int id, String harvestUuid) throws Exception {
         setHarvestedExt(dbms, id, harvestUuid);
-        boolean indexGroup = false;
         indexMetadata(dbms, Integer.toString(id));
     }
 
@@ -1314,7 +1327,7 @@ public class DataManager {
      * @throws NoSchemaMatchesException
      * @return
      */
-    public String autodetectSchema(Element md) throws SchemaMatchConflictException, NoSchemaMatchesException {
+    public @Nonnull String autodetectSchema(Element md) throws SchemaMatchConflictException, NoSchemaMatchesException {
         return autodetectSchema(md, schemaMan.getDefaultSchema());
     }
 
@@ -1328,7 +1341,7 @@ public class DataManager {
      * @throws NoSchemaMatchesException
      * @return
      */
-    public String autodetectSchema(Element md, String defaultSchema) throws SchemaMatchConflictException, NoSchemaMatchesException {
+    public @CheckForNull String autodetectSchema(Element md, String defaultSchema) throws SchemaMatchConflictException, NoSchemaMatchesException {
 
         if(Log.isDebugEnabled(Geonet.DATA_MANAGER))
             Log.debug(Geonet.DATA_MANAGER, "Autodetect schema for metadata with :\n * root element:'" + md.getQualifiedName()
@@ -1349,7 +1362,7 @@ public class DataManager {
      */
     public void updateDisplayOrder(Dbms dbms, String id, String displayOrder) throws Exception {
         String query = "UPDATE Metadata SET displayOrder = ? WHERE id = ?";
-        dbms.execute(query, new Integer(displayOrder), new  Integer(id));
+        dbms.execute(query, Integer.valueOf(displayOrder), new  Integer(id));
     }
 
     /**
@@ -1385,31 +1398,35 @@ public class DataManager {
         //
         // update rating on the database
         //
-        String query = "UPDATE MetadataRating SET rating=? WHERE metadataId=? AND ipAddress=?";
-        int res = dbms.execute(query, rating, id, ipAddress);
+        String updateRatingQuery = "UPDATE MetadataRating SET rating=? WHERE metadataId=? AND ipAddress=?";
+        int res = dbms.execute(updateRatingQuery, rating, id, ipAddress);
 
         if (res == 0) {
-            query = "INSERT INTO MetadataRating(metadataId, ipAddress, rating) VALUES(?,?,?)";
-            dbms.execute(query, id, ipAddress, rating);
+            String insertRatingQuery = "INSERT INTO MetadataRating(metadataId, ipAddress, rating) VALUES(?,?,?)";
+            dbms.execute(insertRatingQuery, id, ipAddress, rating);
         }
 
         //
         // calculate new rating
         //
-        query = "SELECT sum(rating) as total FROM MetadataRating WHERE metadataId=?";
-        List list = dbms.select(query, id).getChildren();
-        String sum = ((Element) list.get(0)).getChildText("total");
-        query = "SELECT count(*) as numr FROM MetadataRating WHERE metadataId=?";
-        list  = dbms.select(query, id).getChildren();
-        String count = ((Element) list.get(0)).getChildText("numr");
+        String sumRatingQuery = "SELECT sum(rating) as total FROM MetadataRating WHERE metadataId=?";
+        @SuppressWarnings("unchecked")
+        List<Element> sumResultList = dbms.select(sumRatingQuery, id).getChildren();
+        String sum = sumResultList.get(0).getChildText("total");
+
+        String countQuery = "SELECT count(*) as numr FROM MetadataRating WHERE metadataId=?";
+        @SuppressWarnings("unchecked")
+        List<Element> countResultList  = dbms.select(countQuery, id).getChildren();
+        String count = countResultList.get(0).getChildText("numr");
         rating = (int)(Float.parseFloat(sum) / Float.parseFloat(count) + 0.5);
         if(Log.isDebugEnabled(Geonet.DATA_MANAGER))
             Log.debug(Geonet.DATA_MANAGER, "Setting rating for id:"+ id +" --> rating is:"+rating);
+
         //
         // update metadata and reindex it
         //
-        query = "UPDATE Metadata SET rating=? WHERE id=?";
-        dbms.execute(query, rating, id);
+        String updateMetadataRatingQuery = "UPDATE Metadata SET rating=? WHERE id=?";
+        dbms.execute(updateMetadataRatingQuery, rating, id);
 
         indexInThreadPoolIfPossible(dbms,Integer.toString(id));
 
@@ -1441,14 +1458,15 @@ public class DataManager {
     public String createMetadata(ServiceContext context, Dbms dbms, String templateId, String groupOwner,
                                  SerialFactory sf, String source, int owner,
                                  String parentUuid, String isTemplate, boolean fullRightsForGroup) throws Exception {
-        int iTemplateId = new Integer(templateId);
+        int iTemplateId = Integer.valueOf(templateId);
         String query = "SELECT schemaId, data FROM Metadata WHERE id=?";
-        List listTempl = dbms.select(query, iTemplateId).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> listTempl = dbms.select(query, iTemplateId).getChildren();
 
         if (listTempl.size() == 0) {
             throw new IllegalArgumentException("Template id not found : " + templateId);
         }
-        Element el = (Element) listTempl.get(0);
+        Element el = listTempl.get(0);
 
         String schema = el.getChildText("schemaid");
         String data   = el.getChildText("data");
@@ -1468,10 +1486,10 @@ public class DataManager {
         copyDefaultPrivForGroup(context, dbms, id, groupOwner, fullRightsForGroup);
 
         //--- store metadata categories copying them from the template
-        List categList = dbms.select("SELECT categoryId FROM MetadataCateg WHERE metadataId = ?",iTemplateId).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> categList = dbms.select("SELECT categoryId FROM MetadataCateg WHERE metadataId = ?",iTemplateId).getChildren();
 
-        for (Object aCategList : categList) {
-            Element elRec = (Element) aCategList;
+        for (Element elRec : categList) {
             String catId = elRec.getChildText("categoryid");
             setCategory(context, dbms, id, catId);
         }
@@ -1573,7 +1591,6 @@ public class DataManager {
      * @throws Exception
      */
     public Element getMetadata(Dbms dbms, String id) throws Exception {
-        boolean doXLinks = xmlSerializer.resolveXLinks();
         Element md = xmlSerializer.selectNoXLinkResolver(dbms, "Metadata", id, false);
         if (md == null) return null;
         md.detach();
@@ -1650,7 +1667,7 @@ public class DataManager {
      */
     public boolean existsMetadata(Dbms dbms, int id) throws Exception {
         //FIXME : should use lucene
-        List list = dbms.select("SELECT id FROM Metadata WHERE id=?", new Integer(id)).getChildren();
+        List<?> list = dbms.select("SELECT id FROM Metadata WHERE id=?", Integer.valueOf(id)).getChildren();
         return list.size() != 0;
     }
 
@@ -1664,7 +1681,7 @@ public class DataManager {
     public boolean existsMetadataUuid(Dbms dbms, String uuid) throws Exception {
         //FIXME : should use lucene
 
-        List list = dbms.select("SELECT uuid FROM Metadata WHERE uuid=?",uuid).getChildren();
+        List<?> list = dbms.select("SELECT uuid FROM Metadata WHERE uuid=?",uuid).getChildren();
         return list.size() != 0;
     }
 
@@ -1675,7 +1692,7 @@ public class DataManager {
      * @throws Exception
      */
     public Element getKeywords() throws Exception {
-        Vector keywords = searchMan.getTerms("keyword");
+        Collection<String> keywords = searchMan.getTerms("keyword");
         Element el = new Element("keywords");
 
         for (Object keyword : keywords) {
@@ -1700,7 +1717,7 @@ public class DataManager {
      * @throws Exception
      */
     public synchronized void updateMetadataOwner(Dbms dbms, int id, String owner, String groupOwner) throws Exception {
-        dbms.execute("UPDATE Metadata SET owner=?, groupOwner=? WHERE id=?", new Integer(owner), new Integer(groupOwner), id);
+        dbms.execute("UPDATE Metadata SET owner=?, groupOwner=? WHERE id=?", Integer.valueOf(owner), Integer.valueOf(groupOwner), id);
     }
 
     /**
@@ -1757,7 +1774,6 @@ public class DataManager {
         finally {
             if(index) {
                 //--- update search criteria
-                boolean indexGroup = false;
                 indexMetadata(dbms, id);
             }
         }
@@ -1966,11 +1982,11 @@ public class DataManager {
      */
     private void saveValidationStatus (Dbms dbms, String id, Map<String, Integer[]> valTypeAndStatus, String date) throws Exception {
         clearValidationStatus(dbms, id);
-        Set<String> i = valTypeAndStatus.keySet();
-        for (String type : i) {
-            String query = "INSERT INTO Validation (metadataId, valType, status, tested, failed, valDate) VALUES (?,?,?,?,?,?)";
-            Integer[] results = valTypeAndStatus.get(type);
-            dbms.execute(query, new Integer(id), type, results[0], results[1], results[2], date);
+        final String query = "INSERT INTO Validation (metadataId, valType, status, tested, failed, valDate) VALUES (?,?,?,?,?,?)";
+        for (Map.Entry<String, Integer[]> entry : valTypeAndStatus.entrySet()) {
+            String type = entry.getKey();
+            Integer[] results = entry.getValue();
+            dbms.execute(query, Integer.valueOf(id), type, results[0], results[1], results[2], date);
         }
         dbms.commit();
     }
@@ -1982,7 +1998,7 @@ public class DataManager {
      * @param id   the metadata record internal identifier
      */
     private void clearValidationStatus (Dbms dbms, String id) throws Exception {
-        dbms.execute("DELETE FROM Validation WHERE metadataId=?", new Integer(id));
+        dbms.execute("DELETE FROM Validation WHERE metadataId=?", Integer.valueOf(id));
         dbms.commit();
     }
 
@@ -1993,8 +2009,10 @@ public class DataManager {
      * @param id   the metadata record internal identifier
      * @return
      */
+    @SuppressWarnings("unchecked")
     private List<Element> getValidationStatus (Dbms dbms, String id) throws Exception {
-        return dbms.select("SELECT valType, status, tested, failed FROM Validation WHERE metadataId=?", new Integer(id)).getChildren();
+        String query = "SELECT valType, status, tested, failed FROM Validation WHERE metadataId=?";
+        return dbms.select(query, Integer.valueOf(id)).getChildren();
     }
 
     //--------------------------------------------------------------------------
@@ -2002,6 +2020,30 @@ public class DataManager {
     //--- Metadata Delete API
     //---
     //--------------------------------------------------------------------------
+
+    /**
+     * TODO Javadoc.
+     *
+     * @param dbms
+     * @param context
+     * @param id
+     * @throws Exception
+     */
+    private void deleteMetadataFromDB(Dbms dbms, ServiceContext context, String id) throws Exception {
+        //--- remove operations
+        deleteMetadataOper(dbms, id, false);
+
+        //--- remove categories
+        deleteAllMetadataCateg(dbms, id);
+
+        dbms.execute("DELETE FROM MetadataRating WHERE metadataId=?", Integer.valueOf(id));
+        dbms.execute("DELETE FROM Validation WHERE metadataId=?", Integer.valueOf(id));
+
+        dbms.execute("DELETE FROM MetadataStatus WHERE metadataId=?", Integer.valueOf(id));
+
+        //--- remove metadata
+        xmlSerializer.delete(dbms, "Metadata", id, context);
+    }
 
     /**
      * Removes a metadata.
@@ -2014,20 +2056,7 @@ public class DataManager {
     public synchronized void deleteMetadata(ServiceContext context, Dbms dbms, String id) throws Exception {
         String uuid = getMetadataUuid(dbms, id);
         String isTemplate = getMetadataTemplate(dbms, id);
-
-        //--- remove operations
-        deleteMetadataOper(dbms, id, false);
-
-        //--- remove categories
-        deleteAllMetadataCateg(dbms, id);
-
-        dbms.execute("DELETE FROM MetadataRating WHERE metadataId=?", new Integer(id));
-        dbms.execute("DELETE FROM Validation WHERE metadataId=?", new Integer(id));
-
-        dbms.execute("DELETE FROM MetadataStatus WHERE metadataId=?", new Integer(id));
-
-        //--- remove metadata
-        xmlSerializer.delete(dbms, "Metadata", id, context);
+        deleteMetadataFromDB(dbms, context, id);
 
         // Notifies the metadata change to metatada notifier service
         if (isTemplate.equals("n")) {
@@ -2046,19 +2075,7 @@ public class DataManager {
      * @throws Exception
      */
     public synchronized void deleteMetadataGroup(ServiceContext context, Dbms dbms, String id) throws Exception {
-        //--- remove operations
-        deleteMetadataOper(dbms, id, false);
-
-        //--- remove categories
-        deleteAllMetadataCateg(dbms, id);
-
-        dbms.execute("DELETE FROM MetadataRating WHERE metadataId=?", new Integer(id));
-        dbms.execute("DELETE FROM Validation WHERE metadataId=?", new Integer(id));
-        dbms.execute("DELETE FROM MetadataStatus WHERE metadataId=?", new Integer(id));
-
-        //--- remove metadata
-        xmlSerializer.delete(dbms, "Metadata", id, context);
-
+        deleteMetadataFromDB(dbms, context, id);
         //--- update search criteria
         searchMan.deleteGroup("_id", id + "");
     }
@@ -2076,7 +2093,7 @@ public class DataManager {
         if (skipAllIntranet)
             query += " AND groupId>1";
 
-        dbms.execute(query, new Integer(id));
+        dbms.execute(query, Integer.valueOf(id));
     }
 
     /**
@@ -2089,7 +2106,7 @@ public class DataManager {
     public void deleteAllMetadataCateg(Dbms dbms, String id) throws Exception {
         String query = "DELETE FROM MetadataCateg WHERE metadataId=?";
 
-        dbms.execute(query, new Integer(id));
+        dbms.execute(query, Integer.valueOf(id));
     }
 
     //--------------------------------------------------------------------------
@@ -2253,14 +2270,18 @@ public class DataManager {
      * @throws Exception
      */
     public void setDataCommons(Dbms dbms, ServiceContext context, String id, String licenseurl, String imageurl, String jurisdiction, String licensename, String type) throws Exception {
+        Element env = prepareCommonsEnv(licenseurl, imageurl, jurisdiction, licensename, type);
+        manageCommons(dbms,context,id,env,Geonet.File.SET_DATACOMMONS);
+    }
+
+    private Element prepareCommonsEnv(String licenseurl, String imageurl, String jurisdiction, String licensename, String type) {
         Element env = new Element("env");
         env.addContent(new Element("imageurl").setText(imageurl));
         env.addContent(new Element("licenseurl").setText(licenseurl));
         env.addContent(new Element("jurisdiction").setText(jurisdiction));
         env.addContent(new Element("licensename").setText(licensename));
         env.addContent(new Element("type").setText(type));
-
-        manageCommons(dbms,context,id,env,Geonet.File.SET_DATACOMMONS);
+        return env;
     }
 
     /**
@@ -2276,13 +2297,7 @@ public class DataManager {
      * @throws Exception
      */
     public void setCreativeCommons(Dbms dbms, ServiceContext context, String id, String licenseurl, String imageurl, String jurisdiction, String licensename, String type) throws Exception {
-        Element env = new Element("env");
-        env.addContent(new Element("imageurl").setText(imageurl));
-        env.addContent(new Element("licenseurl").setText(licenseurl));
-        env.addContent(new Element("jurisdiction").setText(jurisdiction));
-        env.addContent(new Element("licensename").setText(licensename));
-        env.addContent(new Element("type").setText(type));
-
+        Element env = prepareCommonsEnv(licenseurl, imageurl, jurisdiction, licensename, type);
         manageCommons(dbms,context,id,env,Geonet.File.SET_CREATIVECOMMONS);
     }
 
@@ -2324,7 +2339,7 @@ public class DataManager {
      * @throws Exception
      */
     public void setOperation(ServiceContext context, Dbms dbms, String mdId, String grpId, String opId) throws Exception {
-        setOperation(context,dbms,new Integer(mdId),new Integer(grpId),new Integer(opId));
+        setOperation(context,dbms,Integer.valueOf(mdId),Integer.valueOf(grpId),Integer.valueOf(opId));
     }
 
     /**
@@ -2349,7 +2364,7 @@ public class DataManager {
         // Session may not be defined when a harvester is running
         if (context.getUserSession() != null) {
             String userProfile = context.getUserSession().getProfile();
-            if (!userProfile.equals(Geonet.Profile.ADMINISTRATOR)) {
+            if (! (userProfile.equals(Geonet.Profile.ADMINISTRATOR) || userProfile.equals(Geonet.Profile.USER_ADMIN)) ) {
                 int userId = Integer.parseInt(context.getUserSession()
                         .getUserId());
                 // Reserved groups
@@ -2366,9 +2381,6 @@ public class DataManager {
                                         + " because the user in not a Reviewer of any group.");
                     }
                 } else {
-
-                    GeonetContext gc = (GeonetContext) context
-                            .getHandlerContext(Geonet.CONTEXT_NAME);
                     String userGroupsOnly = settingMan
                             .getValue("system/metadataprivs/usergrouponly");
                     if (userGroupsOnly.equals("true")) {
@@ -2408,7 +2420,7 @@ public class DataManager {
      * @throws Exception
      */
     public void unsetOperation(ServiceContext context, Dbms dbms, String mdId, String grpId, String opId) throws Exception {
-        unsetOperation(context,dbms,new Integer(mdId),new Integer(grpId),new Integer(opId));
+        unsetOperation(context,dbms,Integer.valueOf(mdId),Integer.valueOf(grpId),Integer.valueOf(opId));
     }
 
     /**
@@ -2477,6 +2489,53 @@ public class DataManager {
         return (elRes.getChildren().size() != 0);
     }
 
+    public boolean existsUser(Dbms dbms, int id) throws Exception {
+        String query= "SELECT * FROM Users WHERE id=?";
+        List<?> list = dbms.select(query, id).getChildren();
+        return list.size() > 0;
+    }
+
+    /**
+     * Returns id of one of the Administrator users.
+     * @return
+     */
+    public String pickAnyAdministrator(Dbms dbms) throws Exception{
+        String query = "SELECT id FROM users WHERE profile=?";
+        Element elRes = dbms.select(query, Geonet.Profile.ADMINISTRATOR);
+        String id = null;
+        if(elRes != null) {
+            Element elRec = elRes.getChild("record");
+            if(elRec != null) {
+                Element elId = elRec.getChild("id");
+                if(elId != null) {
+                    id = elId.getText();
+                }
+            }
+        }
+        if(StringUtils.isNotEmpty(id)) {
+            return id;
+        }
+        // should never happen
+        else {
+            throw new Exception("Unable to find any Administrator user");
+        }
+    }
+
+    public String getUserProfile(Dbms dbms, int userId) throws Exception {
+        String query = "SELECT profile FROM users WHERE id=?";
+        Element elRes = dbms.select(query, userId);
+        if(elRes != null) {
+            Element elRec = elRes.getChild("record");
+            if(elRec != null) {
+                Element elProfile = elRec.getChild("profile");
+                if(elProfile != null) {
+                    return elProfile.getText();
+                }
+            }
+        }
+        return null;
+    }
+
     //--------------------------------------------------------------------------
     //---
     //--- Status API
@@ -2511,6 +2570,7 @@ public class DataManager {
     public String getCurrentStatus(Dbms dbms, int id) throws Exception {
         Element status = getStatus(dbms, id);
         if (status == null) return Params.Status.UNKNOWN;
+        @SuppressWarnings("unchecked")
         List<Element> statusKids = status.getChildren();
         if (statusKids.size() == 0) return Params.Status.UNKNOWN;
         return statusKids.get(0).getChildText("statusid");
@@ -2529,7 +2589,6 @@ public class DataManager {
      */
     public void setStatus(ServiceContext context, Dbms dbms, int id, int status, String changeDate, String changeMessage) throws Exception {
         setStatusExt(context, dbms, id, status, changeDate, changeMessage);
-        boolean indexGroup = false;
         indexMetadata(dbms, Integer.toString(id));
     }
 
@@ -2565,7 +2624,7 @@ public class DataManager {
      * @throws Exception
      */
     public void setCategory(ServiceContext context, Dbms dbms, String mdId, String categId) throws Exception {
-        Object args[] = { new Integer(mdId), new Integer(categId) };
+        Object args[] = { Integer.valueOf(mdId), Integer.valueOf(categId) };
 
         if (!isCategorySet(dbms, mdId, categId)) {
             dbms.execute("INSERT INTO MetadataCateg(metadataId, categoryId) VALUES(?,?)", args);
@@ -2585,7 +2644,7 @@ public class DataManager {
      */
     public boolean isCategorySet(Dbms dbms, String mdId, String categId) throws Exception {
         String query = "SELECT metadataId FROM MetadataCateg " +"WHERE metadataId=? AND categoryId=?";
-        Element elRes = dbms.select(query, new Integer(mdId), new Integer(categId));
+        Element elRes = dbms.select(query, Integer.valueOf(mdId), Integer.valueOf(categId));
         return (elRes.getChildren().size() != 0);
     }
 
@@ -2598,7 +2657,7 @@ public class DataManager {
      */
     public void unsetCategory(ServiceContext context, Dbms dbms, String mdId, String categId) throws Exception {
         String query = "DELETE FROM MetadataCateg WHERE metadataId=? AND categoryId=?";
-        dbms.execute(query, new Integer(mdId), new Integer(categId));
+        dbms.execute(query, Integer.valueOf(mdId), Integer.valueOf(categId));
         if (svnManager != null) {
             svnManager.setHistory(dbms, mdId+"", context);
         }
@@ -2613,7 +2672,7 @@ public class DataManager {
      */
     public Element getCategories(Dbms dbms, String mdId) throws Exception {
         String query = "SELECT id, name FROM Categories, MetadataCateg WHERE id=categoryId AND metadataId=?";
-        return dbms.select(query, new Integer(mdId));
+        return dbms.select(query, Integer.valueOf(mdId));
     }
 
     /**
@@ -2637,7 +2696,7 @@ public class DataManager {
                 Log.debug(Geonet.DATA_MANAGER, "Autofixing is enabled, trying update-fixed-info (updateDatestamp: " + updateDatestamp.name() + ")");
 
             String query = "SELECT uuid, isTemplate FROM Metadata WHERE id = ?";
-            Element rec = dbms.select(query, new Integer(id)).getChild("record");
+            Element rec = dbms.select(query, Integer.valueOf(id)).getChild("record");
             Boolean isTemplate = rec != null && !rec.getChildText("istemplate").equals("n");
 
             // don't process templates
@@ -2701,7 +2760,8 @@ public class DataManager {
 
         String query = "select m.id, m.uuid, m.data, mn.notifierId, mn.action from metadata m left join metadatanotifications mn on m.id = mn.metadataId\n" +
                 "where (mn.notified is null or mn.notified = 'n') and (mn.action <> 'd') and (mn.notifierId is null or mn.notifierId = ?)";
-        List<Element> results = dbms.select(query, new Integer(notifierId)).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> results = dbms.select(query, Integer.valueOf(notifierId)).getChildren();
         if(Log.isDebugEnabled(Geonet.DATA_MANAGER))
             Log.debug(Geonet.DATA_MANAGER, "getUnnotifiedMetadata after select: " + (results != null));
 
@@ -2736,7 +2796,8 @@ public class DataManager {
 
         String query = "select metadataId as id, metadataUuid as uuid, notifierId, action from metadatanotifications " +
                 "where (notified = 'n') and (action = 'd') and (notifierId = ?)";
-        List<Element> results = dbms.select(query, new Integer(notifierId)).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> results = dbms.select(query, Integer.valueOf(notifierId)).getChildren();
         if(Log.isDebugEnabled(Geonet.DATA_MANAGER))
             Log.debug(Geonet.DATA_MANAGER, "getUnnotifiedMetadataToDelete after select: " + (results != null));
 
@@ -2766,12 +2827,12 @@ public class DataManager {
      */
     public void setMetadataNotified(String metadataId, String metadataUuid, String notifierId, boolean deleteNotification, Dbms dbms) throws Exception {
         String query = "DELETE FROM MetadataNotifications WHERE metadataId=? AND notifierId=?";
-        dbms.execute(query, new Integer(metadataId), new Integer(notifierId));
+        dbms.execute(query, Integer.valueOf(metadataId), Integer.valueOf(notifierId));
         dbms.commit();
 
         if (!deleteNotification) {
             query = "INSERT INTO MetadataNotifications (metadataId, notifierId, metadataUuid, notified, action) VALUES (?,?,?,?,?)";
-            dbms.execute(query, new Integer(metadataId), new Integer(notifierId), metadataUuid, "y", "u");
+            dbms.execute(query, Integer.valueOf(metadataId), Integer.valueOf(notifierId), metadataUuid, "y", "u");
             dbms.commit();
         }
 
@@ -2792,11 +2853,11 @@ public class DataManager {
             Log.debug(Geonet.DATA_MANAGER, "setMetadataNotifiedError");
         try {
             String query = "DELETE FROM MetadataNotifications WHERE metadataId=? AND notifierId=?";
-            dbms.execute(query, new Integer(metadataId), new Integer(notifierId));
+            dbms.execute(query, Integer.valueOf(metadataId), Integer.valueOf(notifierId));
 
             String action = (deleteNotification == true)?"d":"u";
             query = "INSERT INTO MetadataNotifications (metadataId, notifierId, metadataUuid, notified, action, errormsg) VALUES (?,?,?,?,?,?)";
-            dbms.execute(query, new Integer(metadataId), new Integer(notifierId), metadataUuid, "n", action, error);
+            dbms.execute(query, Integer.valueOf(metadataId), Integer.valueOf(notifierId), metadataUuid, "n", action, error);
             dbms.commit();
 
             if(Log.isDebugEnabled(Geonet.DATA_MANAGER))
@@ -2816,7 +2877,9 @@ public class DataManager {
      */
     public List<Element> retrieveNotifierServices(Dbms dbms) throws Exception {
         String query = "SELECT id, url, username, password FROM MetadataNotifiers WHERE enabled = 'y'";
-        return dbms.select(query).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> children = dbms.select(query).getChildren();
+        return children;
     }
 
 
@@ -2900,8 +2963,7 @@ public class DataManager {
 
             String styleSheet = getSchemaDir(parentSchema)
                     + Geonet.File.UPDATE_CHILD_FROM_PARENT_INFO;
-            Element childForUpdate = new Element("root");
-            childForUpdate = Xml.transform(rootEl, styleSheet, params);
+            Element childForUpdate = Xml.transform(rootEl, styleSheet, params);
 
             xmlSerializer.update(dbms, childId, childForUpdate, new ISODate().toString(), true, null, srvContext);
 
@@ -2930,7 +2992,7 @@ public class DataManager {
                 "uuid, isHarvested, harvestUuid, popularity, rating, owner, displayOrder FROM Metadata WHERE id = ?";
 
         // add Metadata table infos: schemaId, createDate, changeDate, source,
-        Element rec = dbms.select(query, new Integer(id)).getChild("record");
+        Element rec = dbms.select(query, Integer.valueOf(id)).getChild("record");
 
         String  schema     = rec.getChildText("schemaid");
         String  createDate = rec.getChildText("createdate");
@@ -2978,18 +3040,18 @@ public class DataManager {
 
         // add owner name
         query = "SELECT username FROM Users WHERE id = ?";
-        Element record = dbms.select(query, new Integer(owner)).getChild("record");
+        Element record = dbms.select(query, Integer.valueOf(owner)).getChild("record");
         if (record != null) {
             String ownerName = record.getChildText("username");
             addElement(info, Edit.Info.Elem.OWNERNAME, ownerName);
         }
 
         // add categories
-        List categories = dbms.select("SELECT id, name FROM MetadataCateg, Categories "+
-                "WHERE metadataId = ? AND categoryId = id ORDER BY id", new Integer(id)).getChildren();
+        @SuppressWarnings("unchecked")
+        List<Element> categories = dbms.select("SELECT id, name FROM MetadataCateg, Categories "+
+                "WHERE metadataId = ? AND categoryId = id ORDER BY id", Integer.valueOf(id)).getChildren();
 
-        for (Object category1 : categories) {
-            Element category = (Element) category1;
+        for (Element category : categories) {
             addElement(info, Edit.Info.Elem.CATEGORY, category.getChildText("name"));
         }
 
@@ -3050,13 +3112,16 @@ public class DataManager {
         Map<String, String> result = new HashMap<String, String>();
         if(CollectionUtils.isNotEmpty(iso639_1_set)) {
             Dbms dbms = (Dbms) context.getResourceManager().open(Geonet.Res.MAIN_DB);
-            String query = "SELECT code, shortcode FROM IsoLanguages WHERE ";
+            StringBuilder queryBuilder = new StringBuilder("SELECT code, shortcode FROM IsoLanguages WHERE ");
+            Object[] iso639_1_array = new String[iso639_1_set.size()];
+            int i = 0;
             for(String iso639_1 : iso639_1_set) {
-                query += "shortcode = ? OR ";
+                iso639_1_array[i++] = iso639_1;
+                queryBuilder.append ("shortcode = ? OR ");
             }
-            query = query.substring(0, query.lastIndexOf("OR"));
+            String query = queryBuilder.substring(0, queryBuilder.lastIndexOf("OR"));
             @SuppressWarnings(value = "unchecked")
-            List<Element> records = dbms.select(query, iso639_1_set.toArray()).getChildren();
+            List<Element> records = dbms.select(query, iso639_1_array).getChildren();
             for(Element record : records) {
                 result.put(record.getChildText("shortcode"), record.getChildText("code"));
             }
@@ -3178,9 +3243,11 @@ public class DataManager {
 
         //--- get the namespaces and add prefixes to any that are
         //--- default (ie. prefix is '') if namespace match one of the schema
-        ArrayList nsList = new ArrayList();
+        ArrayList<Namespace> nsList = new ArrayList<Namespace>();
         nsList.add(ns);
-        nsList.addAll(md.getAdditionalNamespaces());
+        @SuppressWarnings("unchecked")
+        List<Namespace> additionalNamespaces = md.getAdditionalNamespaces();
+        nsList.addAll(additionalNamespaces);
         for (Object aNsList : nsList) {
             Namespace aNs = (Namespace) aNsList;
             if (aNs.getPrefix().equals("")) { // found default namespace
@@ -3267,6 +3334,7 @@ public class DataManager {
         cswCapabilitiesInfo.setLangId(language);
         Element capabilitiesInfoRecord = dbms.select("SELECT * FROM CswServerCapabilitiesInfo WHERE langId = ?", language);
 
+        @SuppressWarnings("unchecked")
         List<Element> records = capabilitiesInfoRecord.getChildren();
         for(Element record : records) {
             String field = record.getChild("field").getText();
@@ -3330,6 +3398,7 @@ public class DataManager {
      */
     public List<Element> getCustomElementSets(Dbms dbms) throws Exception {
         Element customElementSetList = dbms.select("SELECT * FROM CustomElementSet");
+        @SuppressWarnings("unchecked")
         List<Element> records = customElementSetList.getChildren();
         return records;
     }
@@ -3381,7 +3450,7 @@ public class DataManager {
             try {
                 dbms  = (Dbms) srvContext.getResourceManager().openDirect(Geonet.Res.MAIN_DB);
                 String updateQuery = "UPDATE Metadata SET popularity = popularity +1 WHERE id = ?";
-                Integer iId = new Integer(id);
+                Integer iId = Integer.valueOf(id);
                 dbms.execute(updateQuery, iId);
                 indexMetadata(dbms, id);
             }
