@@ -24,7 +24,6 @@
 package org.fao.geonet.services.category;
 
 import jeeves.constants.Jeeves;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ServiceConfig;
 import jeeves.server.context.ServiceContext;
@@ -71,7 +70,7 @@ public class Update extends NotInReadOnlyModeService
 		}
 		else 	//--- For Update
 		{
-			dbms.execute("UPDATE Categories SET name=? WHERE id=?", name, new Integer(id));
+			dbms.execute("UPDATE Categories SET name=? WHERE id=?", name, Integer.valueOf(id));
 
 			elRes.addContent(new Element(Jeeves.Elem.OPERATION).setText(Jeeves.Text.UPDATED));
 		}
