@@ -24,7 +24,6 @@
 package org.fao.geonet.services.group;
 
 import jeeves.constants.Jeeves;
-import jeeves.interfaces.Service;
 import jeeves.resources.dbms.Dbms;
 import jeeves.server.ServiceConfig;
 import jeeves.server.context.ServiceContext;
@@ -74,7 +73,7 @@ public class Update extends NotInReadOnlyModeService {
 		{
 			String query = "UPDATE Groups SET name=?, description=?, email=? WHERE id=?";
 
-			dbms.execute(query, name, descr, email, new Integer(id));
+			dbms.execute(query, name, descr, email, Integer.valueOf(id));
 
 			elRes.addContent(new Element(Jeeves.Elem.OPERATION).setText(Jeeves.Text.UPDATED));
 		}
